set SUMO_HOME environment variable for SUMO process